<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.backbase.buildingblocks</groupId>
        <artifactId>backbase-parent</artifactId>
        <version>15.2.3</version>
        <relativePath />
    </parent>

    <groupId>com.backbase.stream</groupId>
    <artifactId>stream-services</artifactId>
    <version>3.69.0</version>

    <packaging>pom</packaging>
    <name>Stream :: Services</name>

    <modules>
        <module>stream-dbs-clients</module>
        <module>stream-sdk</module>
        <module>stream-models</module>
        <module>stream-product</module>
        <module>stream-access-control</module>
        <module>stream-transactions</module>
        <module>stream-cursor</module>
        <module>stream-product-catalog</module>
        <module>stream-limits</module>
        <module>stream-legal-entity</module>
        <module>stream-approvals</module>
        <module>stream-payment-order</module>
        <module>stream-portfolio</module>
        <module>stream-contacts</module>
        <module>stream-compositions</module>
        <module>stream-loans</module>
        <module>stream-audiences</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <ssdk.version>15.2.3</ssdk.version>
        <backbase-bom.version>2023.06.2</backbase-bom.version>
        <boat-maven-plugin.version>0.16.6</boat-maven-plugin.version>
        <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
        <openapi-generator-maven-plugin.language>spring</openapi-generator-maven-plugin.language>
        <openapi-generator-maven-plugin.library>spring-boot</openapi-generator-maven-plugin.library>
        <codegen.generated-sources-dir>${project.build.directory}/generated-sources</codegen.generated-sources-dir>
        <annotations.generated-sources-dir>${codegen.generated-sources-dir}/annotations</annotations.generated-sources-dir>
        <openapi-generator-maven-plugin.output>${codegen.generated-sources-dir}/openapi</openapi-generator-maven-plugin.output>
        <sonar.organization>backbase</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>

        <japicmp.skip>true</japicmp.skip>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>22.0.0</version>
            </dependency>
            <dependency>
                <groupId>com.backbase.buildingblocks</groupId>
                <artifactId>backbase-building-blocks-release</artifactId>
                <version>${ssdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.backbase.oss</groupId>
                    <artifactId>boat-maven-plugin</artifactId>
                    <version>${boat-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>add-sources</id>
                            <phase>generate-sources</phase>
                            <goals>
                                <goal>add-source</goal>
                            </goals>
                            <configuration>
                                <sources>
                                    <source>${annotations.generated-sources-dir}</source>
                                    <source>${openapi-generator-maven-plugin.output}/src/main/java</source>
                                </sources>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                    <skip>false</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
